--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <body>
     </body>
     <script type="text/javascript">
-        window.location.href="https://www.cnblogs.com/Willoneday/";  //换成自己的博客网站给的域名
+        window.location.href="https://www.cnblogs.com/Willoneday/"; 
     </script>
 </html>
